# petitions_grp_A

./: README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html  merci.html
